# scratch-app-Sharif

./: .gitignore  CMakeLists.txt
scripts/: main.cpp
scripts/CodePanel/: codePanel.cpp  codePanel.h
scripts/Common/: common.cpp  common.h
scripts/CostumesPanel/: CostumesPanel.cpp  CostumesPanel.h
scripts/LeftPannel/ModeSelector/: ModeSelector.cpp  ModeSelector.h
scripts/Menu/: menu.cpp  menu.h
scripts/SpiritFunctions/: spiritFunctions.cpp  spiritFunctions.h
scripts/SpiritPreview/: spiritPreview.cpp  spiritPreview.h
scripts/Ui/: uiFuncs.cpp  uiFuncs.h
